# VulkanGameEngineTutorial

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile.bat
VulkanGameEngine/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  EngineDevice.cpp  EngineDevice.h  EngineSwapChain.cpp  EngineSwapChain.hpp  FirstApp.cpp  FirstApp.h  FrameInfo.h  GameObject.cpp  GameObject.h  KeyboardMovementController.cpp  KeyboardMovementController.h  Model.cpp  Model.h  PipeLine.cpp  PipeLine.h  Renderer.cpp  Renderer.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h  Utils.cpp  Utils.h  VulkanGameEngine.cpp  VulkanGameEngine.h  Window.cpp  Window.h
VulkanGameEngine/Descriptors/: DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorWriter.cpp  DescriptorWriter.h
VulkanGameEngine/Systems/: GravityPhysicsSystem.cpp  GravityPhysicsSystem.h  PointLightSystem.cpp  PointLightSystem.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h  Vec2FieldSystem.cpp  Vec2FieldSystem.h
VulkanGameEngine/shaders/: point_light_frag.glsl  point_light_frag.glsl.spv  point_light_vert.glsl  point_light_vert.glsl.spv  simple_shader_frag.glsl  simple_shader_frag.glsl.spv  simple_shader_vert.glsl  simple_shader_vert.glsl.spv
